# airflow-portainer

./: README.md  pyproject.toml
airflow_portainer/: provider.yaml
airflow_portainer/hooks/: portainer.py
airflow_portainer/operators/: portainer.py
